Update background image URL in style.css

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ header
   z-index:10;
   top:0;
   background-color:#D9DCEB51;
-  background-image:url('https://jaowunsche.github.io/cake-recipes/flytogheter.png');
+  background-image:url('flytogheter.png');
   background-position:left;
   background-repeat:no-repeat;
   background-size:10rem;
